--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "api-fazt-code",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,14 @@
     "express-validator": "^7.3.1",
     "morgan": "^1.10.1",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.15.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "tsx": "^4.20.6",
+    "typescript": "^5.4.5"
   }
 }
