--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "morgan": "^1.10.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
