--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
+    "inversify": "^7.10.4",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
