--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
